@@ -81,6 +81,7 @@
 
 (defcustom mode-info-class-alist
   '((elisp emacs-lisp-mode lisp-interaction-mode)
+    (emacs nil)
     (perl perl-mode cperl-mode eperl-mode)
     (libc c-mode c++-mode)
     (ruby ruby-mode)
@@ -337,31 +338,33 @@ Return nil if there is no such symbol.")
 
 (defun mode-info-show-document (buffer-point &optional keep-window)
   "Display the document pointed by a pair (BUFFER . POINT)."
-  (let* ((buffer (car buffer-point))
-	 (point (cdr buffer-point))
-	 (org (selected-window))
-	 (new (or (unless (eq buffer (current-buffer))
-		    (get-buffer-window buffer))
-		  (if (or keep-window
-			  (not mode-info-split-window))
-		      (selected-window)
-		    (if (one-window-p)
-			(split-window)
-		      (next-window))))))
-    (unless (eq org new)
-      (unless (pos-visible-in-window-p)
-	(recenter (mode-info-static-if (>= emacs-major-version 20)
-		      (if (> (point) (window-end nil t)) -3 2)
-		    (/ (window-height) 2))))
-      (select-window new))
-    (with-current-buffer buffer
-      (set-window-buffer new (current-buffer))
-      (goto-char point)
-      (push-mark point t t)
-      (unless (bobp)
-	(recenter 2)))
-    (unless (or keep-window mode-info-select-window)
-      (select-window org))))
+  (when buffer-point
+    (let* ((buffer (car buffer-point))
+	   (point (cdr buffer-point))
+	   (org (selected-window))
+	   (new (or (unless (eq buffer (current-buffer))
+		      (get-buffer-window buffer))
+		    (if (or keep-window
+			    (not mode-info-split-window))
+			(selected-window)
+		      (if (one-window-p)
+			  (split-window)
+			(next-window))))))
+      (unless (eq org new)
+	(unless (pos-visible-in-window-p)
+	  (recenter (mode-info-static-if (>= emacs-major-version 20)
+			(if (> (point) (window-end nil t)) -3 2)
+		      (/ (window-height) 2))))
+	(select-window new))
+      (with-current-buffer buffer
+	(set-window-buffer new (current-buffer))
+	(goto-char point)
+	(push-mark point t t)
+	(unless (bobp)
+	  (recenter 2)))
+      (unless (or keep-window mode-info-select-window)
+	(select-window org))
+      buffer-point)))
 
 (defsubst mode-info-goto-info-entry-1 (entry &optional interactive-select)
   (if (<= (length entry) 3)
